
<resources>
    <string name="app_name">CalculatorApplication</string>
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_add">+</string>
    <string name="text_subtract">-</string>
    <string name="text_multiply">x</string>
    <string name="text_division">/</string>
    <string name="text_equal">=</string>
    <string name="text_bracket_open">(</string>
    <string name="text_bracket_close">)</string>
    <string name="text_dot">.</string>
    <string name="text_clear_all">AC</string>
    <string name="text_sun_calculator">Sun* Calculator</string>
</resources>
