<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_gradient_start_approxwhisper_end_approxhumingbird_minus90">

    <TextView
        android:id="@+id/textDisplay"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.9"
        app:layout_constraintHeight_percent="@dimen/fl_0.1"
        android:layout_height="@dimen/dp_0"
        android:background="@drawable/bg_topradius_10dp_solid_white_stroke_approxsilver_1dp"
        android:gravity="right"
        android:paddingTop="@dimen/dp_25"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/fl_0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/fl_0.05"/>
    <TextView
        android:id="@+id/textResult"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.9"
        app:layout_constraintHeight_percent="@dimen/fl_0.1"
        android:layout_height="@dimen/dp_0"
        android:background="@drawable/bg_botradius_10dp_solid_white_stroke_approxsilver_1dp"
        android:gravity="right"
        android:paddingTop="@dimen/dp_25"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxSilver"
        app:layout_constraintTop_toBottomOf="@id/textDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="@dimen/fl_0.1"/>
    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toTopOf="@id/buttonAllClear"
        app:layout_constraintVertical_bias="@dimen/fl_0.5"
        android:text="@string/text_sun_calculator"
        android:textColor="@color/colorApproxIndigo"
        android:textSize="@dimen/dp_35"/>
    <Button
        android:id="@+id/buttonAllClear"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textResult"
        app:layout_constraintVertical_bias="@dimen/fl_0.2"
        app:backgroundTint="@null"
        android:text="@string/text_clear_all"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_topleftradius_10dp_stroke_approxsilver_1dp_white" />
    <Button
        android:id="@+id/buttonBracketOpen"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonAllClear"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@dimen/fl_0.2"
        app:backgroundTint= "@null"
        android:text="@string/text_bracket_open"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonBracketClose"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketOpen"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@dimen/fl_0.2"
        app:backgroundTint= "@null"
        android:text="@string/text_bracket_close"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketClose"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@dimen/fl_0.2"
        app:backgroundTint= "@null"
        android:text="@string/text_add"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_toprightradius_10dp_stroke_approxsilver_1dp_white"/>
    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toBottomOf="@id/buttonAllClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textDisplay"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_7"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonEight"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonAllClear"
        app:layout_constraintTop_toBottomOf="@id/buttonBracketOpen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_8"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonNine"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketOpen"
        app:layout_constraintTop_toBottomOf="@id/buttonBracketClose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_9"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonSub"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketClose"
        app:layout_constraintTop_toBottomOf="@id/buttonAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_subtract"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonFour"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toBottomOf="@id/buttonSeven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textDisplay"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_4"
        android:textSize="@dimen/dp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonFive"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonAllClear"
        app:layout_constraintTop_toBottomOf="@id/buttonEight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_5"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonSix"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketOpen"
        app:layout_constraintTop_toBottomOf="@id/buttonNine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_6"
        android:textSize="@dimen/dp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonMul"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketClose"
        app:layout_constraintTop_toBottomOf="@id/buttonSub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_multiply"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonOne"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toBottomOf="@id/buttonFour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textDisplay"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_1"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonAllClear"
        app:layout_constraintTop_toBottomOf="@id/buttonFive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_2"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonThree"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketOpen"
        app:layout_constraintTop_toBottomOf="@id/buttonSix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_3"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketClose"
        app:layout_constraintTop_toBottomOf="@id/buttonMul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_division"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonZero"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.45"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toBottomOf="@id/buttonOne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textDisplay"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_0"
        android:textColor="@color/colorApproxIndigo"
        android:textSize="@dimen/sp_25"
        android:background="@drawable/bg_botleftradius_10dp_stroke_approxsilver_1dp_white"/>
    <Button
        android:id="@+id/buttonDot"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketOpen"
        app:layout_constraintTop_toBottomOf="@id/buttonThree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_dot"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorApproxIndigo"
        android:background="@drawable/bg_white_stroke_1dp"/>
    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent="@dimen/fl_0.225"
        app:layout_constraintHeight_percent="@dimen/fl_0.12"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintLeft_toRightOf="@id/buttonBracketClose"
        app:layout_constraintTop_toBottomOf="@id/buttonDiv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="@integer/int_0"
        app:backgroundTint= "@null"
        android:text="@string/text_equal"
        android:textColor="@color/colorApproxIndigo"
        android:textSize="@dimen/sp_25"
        android:background="@drawable/bg_botrightradius_10dp_stroke_approxsilver_1dp_white"/>
</androidx.constraintlayout.widget.ConstraintLayout>
